From 295912a (scalar):
=====================

In ClosureInvariants/scalarInvariants.py,

(*) Add function invariants_from_advariants_method1() with 
docstring and example

In tests/test_scalarInvariants.py,

(*) Add tests for function invariants_from_advariants_method1()
checking shape and type exceptions

From 7de39c9 (scalar):
=====================

In ClosureInvariants/scalarInvariants.py,

(*) Add function advariants_multiple_loops() with docstring 
and example

In tests/conftest.py,

(*) Add some fixtures for scalar advariant tests

In tests/test_scalarInvariants.py,

(*) Add tests for advariants on lists of correlations on loops

In tests/test_vectorInvariants.py,

(*) Minor updates

From 53b6e54 (scalar):
=====================

In ClosureInvariants/scalarInvariants.py,

(*) Add function advariant() along with docstring and example

In tests/conftest.py,

(*) Add some fixtures for scalar advariant tests

In tests/test_scalarInvariants.py,

(*) Add tests for advariants

From 5691a7a (scalar):
=====================

(*) Update tests/conftest.py for copolar case
(*) Add tests/test_scalarInvariants.py to repo

From 4426115 (scalar):
=====================

(*) Update tests/conftest.py for polarimetric case
(*) Update tests/test_vectorInvariants.py for polarimetric case

From 5b40c36 (scalar):
=====================

(*) Add ClosureInvariants/scalarInvariants.py to repo 

From d39e16b (main):
===================

In ClosureInvariants/vectorInvariants.py,

(*) Add function corrupt_visibilities() with docstring
(*) Update function header and docstring of advariant()

In ClosureInvariants/tests/conftest.py,

(*) Add pytest fixture for complex_gains

In ClosureInvariants/tests/test_vectorInvariants.py,

(*) Add test_invariance()

From 4ccc0db (main):
===================

In ClosureInvariants/vectorInvariants.py,

(*) Add function remove_scaling_factor_minkowski_dots() with docstring

In ClosureInvariants/tests/conftest.py,
