@@ -172,3 +172,11 @@ def copol_corrs_lol(copol_corrs_list1, copol_corrs_list2, copol_corrs_list3):
 def copol_advariants_on_list(copol_advariant1, copol_advariant2, copol_advariant3):
     return NP.concatenate([[copol_advariant1], [copol_advariant2], [copol_advariant3]], axis=0)
 
+@pytest.fixture
+def copol_complex_gains():
+    nants = 10
+    mean_gain_scale = 3.0
+    randseed = None
+    rng = NP.random.default_rng(randseed)
+    gains = rng.normal(loc=1.0, scale=NP.sqrt(0.5)/mean_gain_scale, size=(nants,)).astype(NP.float64) + 1j * rng.normal(loc=1.0, scale=NP.sqrt(0.5)/mean_gain_scale, size=(nants,)).astype(NP.float64) # shape is (...,n_antennas)
+    return gains
